# template-python

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
src/: __main__.py
src/apis/: nlu_blueprint.py  vision_blueprint.py
src/apis/nlu/: nlu_blueprint.py  nlu_schema.py
src/apis/vision/: vision_blueprint.py  vision_schema.py
src/core/nlu/extractors/: layoutlmv3_extractor.py
src/core/nlu/tokenizers/: jieba_tokenizer.py  jieba_userdict.txt  tokenizer.py
src/shared/: constants.py
src/shared/utils/: logger.py  validators.py
tests/: test_diffusion.py
