[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Bryant Tao <minzetao@gmail.com>"]
readme = "README.md"
packages = [{include = "template_python"}]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^22.12.0"
black = "^23.1.0"
isort = "^5.12.0"
sanic-ext = "^22.12.0"
pydantic = "^1.10.6"
diffusers = "^0.14.0"
accelerate = "^0.17.1"
transformers = "^4.27.2"
jieba = "^0.42.1"
datasets = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"